<?xml version="1.0"?>
<package format="2">
  <name>rs_publisher</name>
  <version>0.0.0</version>
  <description>The rs_publisher package</description>

  <maintainer email="ubuntu@todo.todo">ubuntu</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend> roscpp </build_depend>
  <build_depend> roslaunch </build_depend>
  <build_depend> std_msgs </build_depend>
  <build_depend> sensor_msgs </build_depend>
  <build_depend> tf </build_depend>
  <build_depend> image_transport </build_depend>
  <build_depend> librealsense2 </build_depend>

  <export>
  </export>
</package>
